app/src/main/java/com/example/fail/network/di/AppModule.kt
package com.example.fail.network.di

val appModule = listOf(
    networkModule,
    repositoryModule,
    viewModelModule)


